main/production/namespaces/frontend/dashboard/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fundhub-dashboard-v2
spec:
  selector:
    matchLabels:
      app: fundhub-dashboard
  template:
    metadata:
      labels:
        app: fundhub-dashboard
        version: "2.0"
    spec:
      containers:
        - name: fundhub-dashboard
          image: titan29/fundhub-dashboard:2
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "68Mi"
              cpu: "10m"
          ports:
            - containerPort: 8080
