main/production/namespaces/frontend/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fundhub-dashboard
spec:
  selector:
    matchLabels:
      app: fundhub-dashboard
  template:
    metadata:
      labels:
        app: fundhub-dashboard
        version: "1.0"
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: fundhub-dashboard
          image: titan29/fundhub-dashboard:4
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "68Mi"
              cpu: "10m"
          ports:
            - containerPort: 8080
