main/production/namespaces/frontend/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fundhub-dashboard-svc
spec:
  selector:
    app: fundhub-dashboard
  ports:
    - port: 80
      targetPort: 8080
