main/production/namespaces/frontend/dashboard/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fundhub-dashboard-svc-destinationrule
spec:
  host: fundhub-dashboard-svc.frontend.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: "1.0"
  - name: v2
    labels:
      version: "2.0"
